# cloud-asset-security

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cloudformation/: template.yaml
docs/: DESIGN.md
kubernetes/: scan-job.yaml
sample_output/: report_api_acme_payments_com.json  report_api_acme_payments_com.md
scripts/: launch_k8s_job.py
src/: __init__.py  config.py  main.py  models.py
src/discovery/: asset_registry.py  cloudtrail_monitor.py
src/enrichment/: __init__.py  http_enricher.py  port_scanner.py  tls_enricher.py
src/llm_review/: reviewer.py
src/orchestration/: lambda_handler.py  scan_orchestrator.py
src/reporting/: report_generator.py  slack_notifier.py
src/security_checks/: __init__.py  dns_checks.py  endpoint_checks.py  header_checks.py  port_checks.py  tls_checks.py
tests/: test_integration.py  test_security_checks.py
